--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-PREFIX="."
+PREFIX="/"
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
@@ -13,7 +13,7 @@ OWNER_NAME= "᚛Ibrahim adams᚜"
 PORT=3000
 DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
 WARN_COUNT= ""
-STARTING_BOT_MESSAGE= "no"
+STARTING_BOT_MESSAGE= "yes"
 ANTIDELETE='yes'
 PM_PERMIT='no'
 ANTIDELETE1='yes'
